# AWS_Monitioring_Agent

./: .gitignore  AWS_Monitoring_Agent_Phase_2_Plan.md  AWS_Monitoring_Agent_Plan.md  README.md  pyproject.toml
agent/: __init__.py  cli.py  config.py  orchestrator.py
agent/analysis/: analyzer.py  pre_analyzer.py  temporal_analyzer.py
agent/collectors/: alb.py  base.py  cloudformation.py  ecs.py  elasticache.py  opensearch.py  rds.py  waf.py
agent/reporters/: json_writer.py  markdown_writer.py
tests/: test_cli_smoke.py
